deploy/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - miplasip.publicvm.com
      secretName: frontend-cert-tls
  rules:
    - host: miplasip.publicvm.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
